--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <select name="group-criteria">
         <option value="random-student">Random Student</option>
         <option value="neighbor-pairing">Neighbor Pairing</option>
+        <option value="teams-of-three">Teams of Three</option>
       </select>
       <input type="submit" value="Pick" />
     </form>
